--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       // set image source for a die
       function setImage(dieNumber, face) {
         var dieImg = document.getElementById("die" + dieNumber);
-        dieImg.setAttribute("src", "die" + face + ".JPG");
+        dieImg.setAttribute("src", "die" + face + ".jpg");
         dieImg.setAttribute("alt", "die with " + face + " spot(s)");
       } // end function setImage
       // update frequency table in the page
